# emporia

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEMO.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
dashboard/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
dashboard/src/: AgentMoireAvatar.tsx  App.tsx  AppNav.tsx  FederationSection.tsx  PaymentsFeesSection.tsx  ProfileView.tsx  RelayStrip.tsx  SocialHubView.tsx  ThemeControls.tsx  TrustSafetySection.tsx  api.ts  chessReplay.ts  dashboard.css  dashboardCounts.ts  dashboardRoute.ts  eventNav.ts  fen.ts  hooks.ts  listingNav.ts  navConfig.ts  navigation.ts  relayContext.tsx  relayEnv.ts  themeConfig.ts
dashboard/src/ui/: AuditBadge.tsx  FlatRailItem.tsx  cards.tsx  (+12 more)
docs/: REPO_LAYOUT.md  RUNBOOK.md  payments.md
installer/: install.py
logs/: messages_2026-06-30.jsonl  messages_2026-07-01.jsonl
relay/: index.html  relays.json  server.py
scripts/: _action_fens.py  _check_terminal.py  _inspect_sessions.py  _test_replay_fens.py  cleanup_test.py  local_relay.py  run_local_demo.sh  seed_demo_relay.py
skills/: README.md  emporia.md
skills/emporia/: SKILL.md
src/emporia/: __init__.py  agent_sdk.py  env_config.py  identity.py  mcp_server.py  module_sdk.py  negotiation.py  payments.py  relay_server.py  rooms.py  session_audit.py  stripe_profile_discovery.py
tests/: load_benchmark.py  test_emporia.py
video/emporia-hackathon/: AGENT_COMMERCE_NARRATIVE.md  DESIGN.md  NARRATIVE.md  README.md  SCRIPT.md
(+59 files in other folders)
