[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emporia"
version = "0.1.0"
description = "Emporia — federated agent commerce relay"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "fastmcp>=0.2.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
    "cryptography>=42.0.0",
    "stripe>=9.0.0",
]

[project.optional-dependencies]
chess = ["chess>=1.10.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
emporia-relay = "emporia.relay_server:main"
emporia-mcp = "emporia.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/emporia"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "anyio>=4.14.1",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
